--- a/Spring-Backend/src/main/resources/application.properties
+++ b/Spring-Backend/src/main/resources/application.properties
@@ -1,3 +1,27 @@
-server.port = 8080
-spring.h2.console.enabled=true
-spring.datasource.url=jdbc:h2:mem:testdb
+# for h2 database connection
+#server.port = 8080
+#spring.h2.console.enabled=true
+#spring.datasource.url=jdbc:h2:mem:testdb
+
+#for SQL database connection
+spring.jpa.show-sql = true
+
+spring.datasource.url = jdbc:mysql://localhost:3306/ppmtcourse
+
+spring.datasource.username = root
+spring.datasource.password = pass123
+
+
+spring.datasource.driver-class-name=com.mysql.jdbc.Driver
+ spring.jpa.database-platform=org.hibernate.dialect.MySQL5InnoDBDialect
+
+#Conflict with heroku
+spring.jpa.properties.hibernate.dialect = org.hibernate.dialect.MySQL5InnoDBDialect
+spring.jpa.hibernate.ddl-auto =update
+
+
+#none: The default for MySQL. No change is made to the database structure.
+#update: Hibernate changes the database according to the given entity structures.
+#create: Creates the database every time but does not drop it on close.
+#create-drop: Creates the database and drops it when SessionFactory closes.
+
